--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "cors": "^2.8.5",
+    "mongoose": "^8.14.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
